--- a/package.json
+++ b/package.json
@@ -11,26 +11,25 @@
   "author": {
     "name": "OpenShift",
     "email": "ryanj@redhat.com",
-    "url":  "http://openshift.redhat.com/"
+    "url": "http://openshift.redhat.com/"
   },
   "homepage": "http://openshift.redhat.com/",
   "repository": {
     "type": "git",
     "url": "https://gitub.com/openshift/nodejs-custom-version-openshift.git"
   },
-
   "engines": {
     "node": ">= 0.12.0",
     "npm": ">= 1.2.0"
   },
-
   "dependencies": {
+    "body-parser": "^1.13.1",
     "config-multipaas": "^0.1.0",
+    "multer": "^0.1.8",
     "restify": "^2.8.3"
   },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": true,
   "scripts": {
     "start": "node server.js"
